--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,27 +6,16 @@ orbs:
   aws-cli: circleci/aws-cli@3.1.1
   # different jobs are calles later in the workflows sections
 jobs:
-  build-deploy:
+  build:
     docker:
-      - image: 'cimg/node:14.15'
+      # the base image can run most needed actions with orbs
+      - image: "cimg/node:14.15"
     steps:
+      # install node and checkout code
       - node/install:
           node-version: '14.15'         
-      - eb/setup
-      - aws-cli/setup
       - checkout
-      - run:
-          name: Install API Dependencies
-          command: |
-            npm run api:install
-      - run:
-          name: API Build
-          command: |
-            npm run api:build 
-      - run:
-          name: api Deploy
-          command: |
-            npm run api:deploy         
+      # Use root level package.json to install dependencies in the frontend app
       - run:
           name: Install Front-End Dependencies
           command: |
@@ -35,23 +24,55 @@ jobs:
             echo "NPM --version" 
             echo $(npm --version)
             npm run frontend:install
+      # TODO: Install dependencies in the the backend API          
+      - run:
+          name: Install API Dependencies
+          command: |
+           echo "TODO: Install dependencies in the the backend API  "
+      # TODO: Lint the frontend
       - run:
           name: Front-End Lint
           command: |
-            npm run frontend:lint
+            echo "TODO: Lint the frontend"
+      # TODO: Build the frontend app
       - run:
           name: Front-End Build
           command: |
-            npm run frontend:build
+            echo "TODO: Build the frontend app"
+      # TODO: Build the backend API      
       - run:
-          name: Front-End Deploy
+          name: API Build
           command: |
-            npm run frontend:deploy       
+            echo "TODO: Build the backend API"
+  # deploy step will run only after manual approval
+  deploy:
+    docker:
+      - image: "cimg/base:stable"
+      # more setup needed for aws, node, elastic beanstalk
+    steps:
+      - node/install:
+          node-version: '14.15' 
+      - eb/setup
+      - aws-cli/setup
+      - checkout
+      - run:
+          name: Deploy App
+          # TODO: Install, build, deploy in both apps
+          command: |
+            echo "# TODO: Install, build, deploy in both apps"
+            
 workflows:
   udagram:
     jobs:
-      - build-deploy:
+      - build
+      - hold:
           filters:
             branches:
               only:
                 - master
+          type: approval
+          requires:
+            - build
+      - deploy:
+          requires:
+            - hold
