--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ workflows:
           filters:
               branches:
                 only:
-                  - master
+                  - main
 jobs:
   build:
     docker:
