--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - run:
           name: Front-End Build
           command: |
-            npm run frontend:build
+            echo "TODO: Build the frontend app"
       # deploy the frontend app      
       - run:
           name: Front-End deploy
