--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,19 +49,19 @@ jobs:
       - run:
           name: Front-End deploy
           command: |
-            npm run frontend:deploy      
+            echo "TODO: deploy the frontend app"     
       # Install dependencies in the the backend API
       - run:
           name: Install API Dependencies
           command: |
-            npm run api:install
+            echo "TODO: install API Dependencies"
       # Build the backend API      
       - run:
           name: API Build
           command: |
-            npm run api:build
+            echo "TODO: build API"
       # deploy the backend API      
       - run:
           name: API deploy
           command: |
-            npm run api:deploy
+            echo "TODO: deploy API"
