--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,29 +39,29 @@ jobs:
       - run:
           name: Front-End Lint
           command: |
-            echo "TODO: Lint the frontend"
+            npm run frontend:lint
       # Build the frontend app
       - run:
           name: Front-End Build
           command: |
-            echo "TODO: Build the frontend app"
+            npm run frontend:build
       # deploy the frontend app      
       - run:
           name: Front-End deploy
           command: |
-            echo "TODO: deploy the frontend app"     
+            npm run frontend:deploy      
       # Install dependencies in the the backend API
       - run:
           name: Install API Dependencies
           command: |
-            echo "TODO: install API Dependencies"
+            npm run api:install
       # Build the backend API      
       - run:
           name: API Build
           command: |
-            echo "TODO: build API"
+            npm run api:build
       # deploy the backend API      
       - run:
           name: API deploy
           command: |
-            echo "TODO: deploy API"
+            npm run api:deploy
