--- a/udagram/udagram-frontend/package.json
+++ b/udagram/udagram-frontend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "ng": "ng",
     "start": " ng serve",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider build",
-    "deploy": "chmod +x bin/deploy.sh && sh bin/deploy.sh",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider ng build",
+    "deploy": "chmod +x ./bin/deploy.sh && bash ./bin/deploy.sh",
     "test": "ng test --watch=false --browsers ChromeHeadless",
     "lint": "ng lint --fix",
     "e2e": "ng e2e"
