--- a/udagram/udagram-frontend/package.json
+++ b/udagram/udagram-frontend/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": " ng serve",
     "build": "set NODE_OPTIONS=--openssl-legacy-provider ng build",
-    "deploy": "chmod +x ./bin/deploy.sh && bash ./bin/deploy.sh",
+    "deploy": "chmod +x bin/deploy.sh && bin/deploy.sh",
     "test": "ng test --watch=false --browsers ChromeHeadless",
     "lint": "ng lint --fix",
     "e2e": "ng e2e"
