--- a/udagram/udagram-frontend/package.json
+++ b/udagram/udagram-frontend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "ng": "ng",
     "start": " ng serve",
-    "build": "ng build --force",
-    "deploy": "chmod +x bin/deploy.sh && bin/deploy.sh",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider ng build ",
+    "deploy": "sh ./bin/deploy.sh",
     "test": "ng test --watch=false --browsers ChromeHeadless",
     "lint": "ng lint --fix",
     "e2e": "ng e2e"
