--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -12,7 +12,7 @@
     "dev": "npx ts-node-dev --respawn --transpileOnly ./src/server.ts",
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
-    "deploy": "chmod +x ./bin/deploy.sh && bash ./bin/deploy.sh",
+    "deploy": "chmod +x bin/deploy.sh && sh bin/deploy.sh",
     "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
